CSS/sobre.css
:root{
    --title-size: 3.6rem;
    --title-color: rgba(0, 0, 0, .7);
    --paragraph-size: 2rem;
    --font: "Lora", serif;
    --font2: "Montserrat", sans-serif;
    --background-color: rgba(0, 0, 0, .6);
}

html{
    font-size: 62.5%;
}

body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: var(--font);
    font-optical-sizing: auto;
    font-style: normal;
    font-weight: 400;
    background-color: rgba(123, 92, 52, 0.4);
    font-size: var(--paragraph-size);
    letter-spacing: .2rem;
    line-height: 3rem;

}

.menu-container{
    background-color: rgba(255, 255, 255, .4);
    top: 0;
    position: sticky;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    z-index: 1;
}

.menu-nav{
    padding: 3rem;
    width: 50%;
}

.menu-list{
    gap: 4rem;
    font-size: 2rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: right;
    list-style-type: none;
    letter-spacing: .1rem;
    margin-right: 5rem;
}

.menu-item a{
    text-decoration: none;
    color: rgb(154, 112, 15);
    padding: 1.2rem;
}

.menu-item{
    transform: scale(1);
    transition: transform 0.5s ease;
}

.menu-item:hover{
    transform: scale(1.3)
}

.fa-instagram{
    font-size: 3rem;
}

.logo{
   width: 50%;
   max-width: 400px;
   
}

.main-text{
    width: 80vw;
    margin: auto;
    padding: 3rem; 
}

.history-title {
    font-size: var(--title-size);
    color: var(--title-color);
    font-family: var(--font2);
    text-align: left;
    margin-bottom: 5rem;
    transform: scale(0);
    transition: transform 1s ease-out;
}

.apresentacao{
    text-align: justify;
    transform: scale(0);
    transition: transform 1.5s ease-out;
}

.sizeEffect{
    transform: scale(1);
}

.dani-container {
    display: flex; 
    flex-wrap: wrap; 
    gap: 5rem;
    justify-content: center;
    align-items: center;
}

.secao-dani{
    margin-bottom: 5rem;
}

.dani-img {
    width: 40%; 
    max-width: 300px; 
    height: auto; 
    border-radius: 1rem;
    transform: translateY(-100%); 
    opacity: 0;
    transition: transform .7s ease-out, opacity .7s ease-out;
}

.apresentacao-dani{
    max-width: 50%;
    text-align: justify;
    transform: translateX(100%);
    opacity: 0;
    transition: transform 1.3s ease-out, opacity 1.3s ease-out;
}


.scrollRight{
    transform: translateX(0);
    opacity: 1;
}

.daniImageScroll{
    transform: translateY(0);
    opacity: 1;
}

.samira-container{
    display: flex;
    flex-wrap: wrap;
    gap: 5rem;
    justify-content: center;
    align-items: center;
    
}

.samira-img{
    width: 40%;
    max-width: 300px;
    height: auto;
    border-radius: 1rem;
    opacity: 0;
    transform: translateY(60%);
    transition: transform .7s ease-out, opacity .7s ease-out;
    
}

.apresentacao-samira{
    max-width: 50%;
    text-align: justify;
    transform : translateX(-100%);
    opacity: 0;
    transition: transform 1.5s ease-out, opacity 1.5s ease-out;
}

.scrollLeft{
    transform: translateX(0);
    opacity: 1;
}

.samiraImageScroll{
    transform: translateY(0);
    opacity: 1;
}

.rodape{
    background-color: var(--background-color) ;
    color: white;
    font-size: 1.6rem;
    text-align: center;
    padding: 1rem;
    margin-top: 5rem;
}


/* formatação para celular */
@media(max-width: 768px){

    .menu-container{
        flex-direction: column;
        align-items: center;
        top: 0;
        left: 0;
        position: sticky;
        z-index: 1;
    }

    .menu-nav{
        width: 100%;
        padding: .1rem 0;
    }

    .menu-list{
        flex-direction: column;
        align-items: center;
        gap: 1.6rem;
    }

    .logo{
        width: 80%;
        max-width: 250px;
    }

    .main-text{
        padding: 0;
        width: 90%;
        margin-bottom: 3rem;
    }

    .history-title{
        text-align: center;

    }

    .apresentacao-dani, .apresentacao-samira{
        width: 90%;
        max-width: 90%;
        margin: auto;
    
    }
}

